# AgentWatch

./: CODE_SIGNING_POLICY.md  OPEN_ISSUES.md  README.md  TODO.md  package-lock.json  package.json
.github/workflows/: build-windows.yml
src/: App.css  App.tsx  Island.tsx  Logo.tsx  SettingsPanel.tsx  StatusIcon.tsx  UpdateBanner.tsx  api.ts  format.test.ts  format.ts  main.tsx  types.ts  useUpdater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: aggregator.rs  claude_paths.rs  commands.rs  history.rs  island.rs  lib.rs  main.rs  model.rs  notifications.rs  pricing.rs  processes.rs  sessions.rs  settings.rs  statusline.rs  subagents.rs  transcripts.rs  tray.rs  watcher.rs
