[package]
name = "agentwatch"
version = "0.2.1"
description = "AgentWatch - Live-Monitor fuer aktive Claude-Code-Sessions"
authors = ["AgentWatch"]
license = "MIT"
edition = "2021"

[lib]
# Der `_lib`-Suffix ist noetig, damit der Lib-Name eindeutig ist und nicht mit
# dem Bin-Namen kollidiert (Windows-spezifisches Cargo-Verhalten).
name = "agentwatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Dateisystem-Watching (Echtzeit statt Polling)
notify = "6"
# Prozess-Scan fuer Liveness-Cross-Check der Sessions
sysinfo = "0.32"
# Home-Verzeichnis / Standardpfade plattformuebergreifend
dirs = "5"
# Zeitstempel-Parsing der Transcript-Zeilen
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
# Kleinere, schlanke Release-Binary fuer eine Dauerlaeufer-Tray-App
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
